# papercli

./: .env.example  .gitignore  MANIFEST.in  README.md  alembic.ini  database.py  interactive_selector.py  main.py  paper_manager.py  papercli.py  pyproject.toml  requirements.txt
.serena/: project.yml
alembic/: env.py
alembic/versions/: 5e98a3a7b313_create_all_tables.py  66e39a3cba42_add_paper_type_created_at_updated_at_to_.py  9eb6f7209d15_initial_schema_with_updated_paper_model.py  b0c3d711e447_initial_schema_with_cascade_support.py
app/: add_dialog.py  chat_dialog.py  cli.py  collect_dialog.py  collection_dialog.py  database.py  dialogs.py  edit_dialog.py  export_dialog.py  filter_dialog.py  metadata_panel.py  models.py  paper_input_dialog.py  papercli.py  prompts.py  search_dialog.py  services.py  simple_dialogs.py  sort_dialog.py  status_messages.py  ui_components.py  update_dialog.py  validators.py  version.py
app/alembic/: env.py
app/cli/: __init__.py  cli.py  completer.py  ui_setup.py
app/db/: __init__.py  database.py  models.py
app/dialogs/: __init__.py  add.py  chat.py  collect.py  edit.py  filter.py  sort.py  sync.py
app/services/: __init__.py  add_paper.py  add_paper_service.py  author.py  author_service.py  auto_sync.py  background.py  background_service.py  chat.py  chat_service.py  database.py  database_service.py  db_utils.py  export_service.py  http_utils.py  llm.py  llm_service.py  metadata.py  metadata_service.py  paper.py  paper_service.py  pdf.py  pdf_service.py  search.py  search_service.py  sync.py  sync_service.py  system.py  system_service.py  utils.py
app/ui/: __init__.py  components.py
ng/: __init__.py  papercli.py  prompts.py  version.py
ng/commands/: __init__.py  base.py  collection.py  export.py  paper.py  search.py  system.py
ng/db/: __init__.py  database.py  models.py
ng/dialogs/: __init__.py  add.py  add_dialog.py  chat.py  chat_dialog.py  collect.py  collect_dialog.py  config.py  confirm.py  detail.py  detail_dialog.py  doctor.py  doctor_dialog.py  edit.py  edit_dialog.py  filter.py  filter_dialog.py  message.py  message_dialog.py  sort.py  sort_dialog.py  sync.py
ng/screens/: log_screen.py  main_screen.py
ng/services/: __init__.py  add_paper.py  author.py  auto_sync.py  background.py  chat.py  collection.py  database.py  db_utils.py  dialog_utils.py  export.py  formatting.py  http_utils.py  llm.py  llm_utils.py  metadata.py  paper.py  paper_tracker.py  path_utils.py  pdf.py  prompts.py  search.py  sync.py  system.py  theme.py  utils.py  validation.py  webpage.py
ng/ui/: status.py
(+18 files in other folders)
